--- a/pink-lemon-llc-backend/build.gradle
+++ b/pink-lemon-llc-backend/build.gradle
@@ -4,9 +4,12 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'com.pinklemonllc'
+group = 'com.pinklemon'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+	sourceCompatibility = '17'
+}
 
 repositories {
 	mavenCentral()
