Organize Folder Structure

--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8000
+spring.flyway.url=jdbc:mysql://localhost/
+spring.flyway.user=root
+spring.flyway.schemas=db_pink
+spring.datasource.url=jdbc:mysql://localhost/db_pink
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
