--- a/pink-lemon-llc-backend/build.gradle
+++ b/pink-lemon-llc-backend/build.gradle
@@ -16,8 +16,12 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.1.0'
+	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 }
 
 tasks.named('test') {
