--- a/pink-lemon-llc-backend/build.gradle
+++ b/pink-lemon-llc-backend/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.1.0'
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 }
 
