--- a/pink-lemon-llc-backend/build.gradle
+++ b/pink-lemon-llc-backend/build.gradle
@@ -17,12 +17,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.1.0'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
