Migrate Gradle Groovy to Maven

--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -2,8 +2,15 @@ server.port=8000
 spring.flyway.url=jdbc:mysql://localhost/
 spring.flyway.user=root
 spring.flyway.schemas=db_pink
+
+## MySQL
 spring.datasource.url=jdbc:mysql://localhost/db_pink
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+spring.datasource.hikari.connectionTimeout=20000
+spring.datesource.datasource.hikari.maximumPoolSize=5
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
