--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datesource.datasource.hikari.maximumPoolSize=5
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
+spring.security.user.name=mohamed
+spring.security.user.password=1fc15145-dfee-4bec-a009-e32ca21c77ce
+spring.security.filter.order=10
