Install Spring Security

--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Application Properties
+
+## Server Port
 server.port=8000
 spring.flyway.url=jdbc:mysql://localhost/
 spring.flyway.user=root
@@ -12,8 +15,11 @@ spring.jpa.show-sql=true
 spring.datasource.hikari.connectionTimeout=20000
 spring.datesource.datasource.hikari.maximumPoolSize=5
 
-#drop n create table again, good for testing, comment this in production
+## drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
 spring.security.user.name=mohamed
 spring.security.user.password=1fc15145-dfee-4bec-a009-e32ca21c77ce
 spring.security.filter.order=10
+
+## JWT Secret key
+jwt.secret=pinklemonllc
