--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -6,19 +6,17 @@ spring.flyway.url=jdbc:mysql://localhost/
 spring.flyway.user=root
 spring.flyway.schemas=db_pink
 
-## MySQL
+## Data Source
 spring.datasource.url=jdbc:mysql://localhost/db_pink
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## JPA/Hibernate
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.hikari.connectionTimeout=20000
-spring.datesource.datasource.hikari.maximumPoolSize=5
-
-## drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
-spring.security.user.name=mohamed
-spring.security.user.password=1fc15145-dfee-4bec-a009-e32ca21c77ce
+## Spring Security Filters
 spring.security.filter.order=10
 
 ## JWT Secret key
