--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.security.filter.order=10
 
 ## JWT Secret key
 jwt.secret=pinklemonllc
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
