--- a/pink-lemon-llc-frontend/package.json
+++ b/pink-lemon-llc-frontend/package.json
@@ -1,39 +1,44 @@
 {
-  "name": "pink-lemon",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.1",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/joy": "^5.0.0-alpha.81",
-    "axios": "^1.4.0",
-    "history": "^5.3.0",
-    "jsonwebtoken": "^9.0.0",
-    "query-string": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-easy-crop": "^4.7.4",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.11.1"
-  },
-  "devDependencies": {
-    "@types/bootstrap": "^5.2.6",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
-  }
+    "name": "pink-lemon",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix",
+        "preview": "vite preview",
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@fontsource/roboto": "^5.0.1",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/joy": "^5.0.0-alpha.81",
+        "axios": "^1.4.0",
+        "history": "^5.3.0",
+        "jsonwebtoken": "^9.0.0",
+        "query-string": "^8.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-easy-crop": "^4.7.4",
+        "react-modal": "^3.16.1",
+        "react-router-dom": "^6.11.1"
+    },
+    "devDependencies": {
+        "@types/bootstrap": "^5.2.6",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@vitejs/plugin-react": "^4.0.0",
+        "eslint": "^8.43.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "prettier": "^2.8.8",
+        "vite": "^4.3.2"
+    }
 }
