--- a/pink-lemon-llc-frontend/package.json
+++ b/pink-lemon-llc-frontend/package.json
@@ -25,7 +25,8 @@
         "react-dom": "^18.2.0",
         "react-easy-crop": "^4.7.4",
         "react-modal": "^3.16.1",
-        "react-router-dom": "^6.11.1"
+        "react-router-dom": "^6.11.1",
+        "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
         "@types/bootstrap": "^5.2.6",
