ImageGeneration endpoint and update frontend

--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -15,11 +15,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 ## Spring Security Filters
 spring.security.filter.order=10
 
 ## JWT Secret key
-jwt.secret=pinklemonllc
+jwt.secret=mnemonically
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+## OPENAI API
+openai.api-key=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
+openai.api-url=https://api.openai.com/v1/images/generations
