--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -1,28 +1,35 @@
-# Application Properties
-
-## Server Port
+###### SERVER PORT ######
 server.port=8000
 spring.flyway.url=jdbc:mysql://localhost/
 spring.flyway.user=root
 spring.flyway.schemas=db_pink
 
-## Data Source
+###### DATA SOURCE ######
 spring.datasource.url=jdbc:mysql://localhost/db_pink
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-## JPA/Hibernate
+###### JPA HIBERNATES ######
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
-## Spring Security Filters
+###### SPRING SECURITY FILTERS ######
 spring.security.filter.order=10
 
-## JWT Secret key
+###### JSON WEB TOKEN ######
 jwt.secret=mnemonically
 
-## OPENAI API
+###### OPENAI API ######
 openai.api-key=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
 openai.api-url=https://api.openai.com/v1/images/generations
+
+###### EMAIL PROPERTIES ######
+# smtp mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thomasliu1005@gmail.com
+spring.mail.password=whrnrxhddlf1005
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
