--- a/pink-lemon-llc-backend/pom.xml
+++ b/pink-lemon-llc-backend/pom.xml
@@ -82,6 +82,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
