--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -29,7 +29,7 @@ openai.api-url=https://api.openai.com/v1/images/generations
 # smtp mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=thomasliu1005@gmail.com
-spring.mail.password=whrnrxhddlf1005
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
