Feat: Add a new endpoint to get utente detail

--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -27,6 +27,7 @@ openai.api-url=https://api.openai.com/v1/images/generations
 
 ###### EMAIL PROPERTIES ######
 # smtp mail properties
+# How to get mail password: manage google account -> enable two-step verification -> set app password
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
