Feat: Add an endpoint to variate the images.

--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -23,7 +23,6 @@ jwt.secret=mnemonically
 
 ###### OPENAI API ######
 openai.api-key=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
-openai.api-url=https://api.openai.com/v1/images/generations
 
 ###### EMAIL PROPERTIES ######
 # smtp mail properties
@@ -34,3 +33,8 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+###### MULTIPART SETTING ######
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
