--- a/pink-lemon-llc-backend/pom.xml
+++ b/pink-lemon-llc-backend/pom.xml
@@ -87,6 +87,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>22.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
