--- a/pink-lemon-llc-frontend/package.json
+++ b/pink-lemon-llc-frontend/package.json
@@ -27,6 +27,7 @@
         "react-hot-toast": "^2.4.1",
         "react-modal": "^3.16.1",
         "react-router-dom": "^6.11.1",
+        "react-stripe-checkout": "^2.6.3",
         "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
