--- a/pink-lemon-llc-frontend/package.json
+++ b/pink-lemon-llc-frontend/package.json
@@ -17,6 +17,8 @@
         "@fontsource/roboto": "^5.0.1",
         "@mui/icons-material": "^5.11.16",
         "@mui/joy": "^5.0.0-alpha.81",
+        "@stripe/react-stripe-js": "^2.1.1",
+        "@stripe/stripe-js": "^1.54.1",
         "axios": "^1.4.0",
         "history": "^5.3.0",
         "jsonwebtoken": "^9.0.0",
