--- a/pink-lemon-llc-backend/src/main/resources/application.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.security.filter.order=10
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=thomasliu1005@gmail.com
+spring.mail.password=kqtoqbehuxirhdhk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.enabled=true
