Fix: Aruba STMP connection

--- a/pink-lemon-llc-backend/src/main/resources/application-dev.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application-dev.properties
@@ -25,6 +25,7 @@ spring.mail.username=thomasliu1005@gmail.com
 spring.mail.password=kqtoqbehuxirhdhk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
 
 # Servelt Properties
 spring.servlet.multipart.enabled=true
