--- a/pink-lemon-llc-backend/src/main/resources/application-prod.properties
+++ b/pink-lemon-llc-backend/src/main/resources/application-prod.properties
@@ -18,14 +18,16 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.security.filter.order=10
 
 # SMTP(Simple Mail Transfer Protocol) Properties
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=smtps.aruba.it
+spring.mail.port=465
 ## SMTP properties for live mode
-spring.mail.username=thomasliu1005@gmail.com
-spring.mail.password=kqtoqbehuxirhdhk
-
+spring.mail.username=info@pinklemon.io
+spring.mail.password=Fedj@_2023
+spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
 
 # Servelt Properties
 spring.servlet.multipart.enabled=true
