--- a/pink-lemon-llc-frontend/package.json
+++ b/pink-lemon-llc-frontend/package.json
@@ -20,16 +20,19 @@
         "@stripe/react-stripe-js": "^2.1.1",
         "@stripe/stripe-js": "^1.54.1",
         "axios": "^1.4.0",
+        "bootstrap": "^5.1.3",
         "history": "^5.3.0",
         "jsonwebtoken": "^9.0.0",
         "query-string": "^8.1.0",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.8.0",
         "react-dom": "^18.2.0",
         "react-easy-crop": "^4.7.4",
         "react-hot-toast": "^2.4.1",
         "react-modal": "^3.16.1",
         "react-router-dom": "^6.11.1",
         "react-stripe-checkout": "^2.6.3",
+        "sass": "^1.64.2",
         "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
